# attis

./: .flake8  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  cli.sh  iscake.sh  main.sh  precommit.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonpublish.yml
attis/: __init__.py  config.yml  help.yml  main.py
attis/libcore/: __init__.py  action_manager.py  daemon.py  preset_manager.py
attis/libcore/action/: base_action.py  exe_action.py  help_action.py  list_action.py  remove_action.py  set_action.py  term_style.py  version_action.py
attis/static/: config.yml  help.yml
tests/: test_main_entry.py
