[metadata]
name=attis
download_url=https://github.com/kyzas/attis/tarball/master
description=A productivity tool for linux terminal
long_description=file:README.md
long_description_content_type=text/markdown
author=kyzas
author_email=minhng92@gmail.com
maintainer=kyzas
maintainer_email=minhng92@gmail.com
url=https://github.com/kyzas/attis
license=MIT
license_files=LICENSE
classifiers=
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation

[options]
packages = find:
python_requires=>=3.5, <4,
#install_requires=
#    <your-dependency-lib-1>
#    <your-dependency-lib-2>

[options.entry_points]
console_scripts =
    attis = attis:main_entry
    a = attis:main_entry

[bdist_wheel]
universal=1
